After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 655585 - Possibly wrong annotation in gtk_source_gutter_get_renderer_at_pos
Possibly wrong annotation in gtk_source_gutter_get_renderer_at_pos
Status: RESOLVED FIXED
Product: gtksourceview
Classification: Platform
Component: General
git master
Other Linux
: Normal normal
: ---
Assigned To: GTK Sourceview maintainers
GTK Sourceview maintainers
Depends on:
Blocks:
 
 
Reported: 2011-07-29 14:29 UTC by Krzesimir Nowak
Modified: 2011-07-30 09:38 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
Changes transfer mode from 'full' to 'none'. (883 bytes, patch)
2011-07-29 14:29 UTC, Krzesimir Nowak
accepted-commit_now Details | Review

Description Krzesimir Nowak 2011-07-29 14:29:13 UTC
Created attachment 192878 [details] [review]
Changes transfer mode from 'full' to 'none'.

I have some suspicions that return value should be annotated with (transfer none) instead of (transfer full) - I don't see any additional refcount increment given at the return. Attached patch fixes the typo.
Comment 1 Ignacio Casal Quinteiro (nacho) 2011-07-29 15:17:51 UTC
Review of attachment 192878 [details] [review]:

Feel free to push.
Comment 2 Paolo Borelli 2011-07-30 09:38:53 UTC
This problem has been fixed in the development version. The fix will be available in the next major software release. Thank you for your bug report.