Fixed annotation for gtk_source_gutter_get_renderer_at_pos.

https://bugzilla.gnome.org/show_bug.cgi?id=655585